--- a/test/app/Makefile
+++ b/test/app/Makefile
@@ -6,7 +6,7 @@
 SPDK_ROOT_DIR := $(abspath $(CURDIR)/../..)
 include $(SPDK_ROOT_DIR)/mk/spdk.common.mk
 
-DIRS-y += bdev_svc fuzz histogram_perf jsoncat stub
+DIRS-y += bdev_svc fuzz histogram_perf jsoncat stub nvmf_target_tester
 
 .PHONY: all clean $(DIRS-y)
 
