dpdk: add adjustments for recent rte_power changes
There were a couple of changes to the rte_power library:
 1) Hardware-specific code was moved out of rte_ower into individual
    drivers under the drivers/power directory.
 2) The header file was renamed rte_power.h -> rte_power_cpufreq.h.

Signed-off-by: Konrad Sztyber <konrad.sztyber@intel.com>
Change-Id: Iac8aeb99423a21905a8bea744ccf662539b26da0

--- a/dpdkbuild/Makefile
+++ b/dpdkbuild/Makefile
@@ -68,7 +68,9 @@ DPDK_LIBS = eal ring mempool pci
 DPDK_LIBS += log kvargs telemetry
 # Governor required libs
 DPDK_LIBS += power timer ethdev net
-
+# rte_power drivers
+DPDK_DRIVERS += power/acpi power/amd_pstate power/cppc power/intel_pstate power/intel_uncore \
+		power/kvm_vm
 # common crypto/compress drivers
 ifeq ($(findstring y,$(CONFIG_DPDK_COMPRESSDEV)$(CONFIG_CRYPTO)$(CONFIG_VBDEV_COMPRESS)),y)
 DPDK_DRIVERS += crypto/qat compress/qat common/qat
