build: use VERSION file for storing version
This reduces the number of places to update whenever a version is bumped
and also gives us an easy way to check the current version from scripts.

Signed-off-by: Konrad Sztyber <konrad.sztyber@intel.com>
Change-Id: I01d7240b6e07467548c211f1e505c1e1a34360af

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ cscope.out
 dpdk-*
 CUnit-Memory-Dump.xml
 include/spdk/config.h
+include/spdk/version.h
 CONFIG.local
 *VC.db
 .vscode
@@ -36,6 +37,7 @@ mk/cc.mk
 mk/config.mk
 mk/cc.flags.mk
 PYTHON_COMMAND
+python/spdk/version.py
 test_completions.txt
 timing.txt
 test/common/build_config.sh
