build: use VERSION file for storing version
This reduces the number of places to update whenever a version is bumped
and also gives us an easy way to check the current version from scripts.

Signed-off-by: Konrad Sztyber <konrad.sztyber@intel.com>
Change-Id: I01d7240b6e07467548c211f1e505c1e1a34360af

--- a/python/Makefile
+++ b/python/Makefile
@@ -40,9 +40,15 @@ pylibprefix := $(shell a=$(pylibdir); echo $${a%/lib*})
 pylibdir := $(CONFIG_PREFIX)$(pylibdir:$(pylibprefix)%=%)
 endif
 
-all:
+all: spdk/version.py
 
 clean:
+	$(Q)rm -f spdk/version.py
+
+spdk/version.py: $(SPDK_ROOT_DIR)/VERSION
+	$(Q)printf "__version__ = '%d.%d%s'\n" \
+		$(version_major) $(version_minor) \
+		$(shell echo -n \"$(version_suffix)\" | sed 's/-pre/rc0/g' | tr -d -) > spdk/version.py
 
 install: rpc spdkcli
 	$(Q)$(setup_cmd) $(SPDK_ROOT_DIR)/python
